--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="stat_poids">Stats et poids</string>
     <string name="succes">Succès</string>
     <string name="cherche_plat">Rechercher un plat</string>
+    <string name="conseil_zone_text">Entrer un plat ...</string>
 </resources>
