--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="succes">Succès</string>
     <string name="cherche_plat">Rechercher un plat</string>
     <string name="conseil_zone_text">Entrer un plat ...</string>
+    <string name="nouveau_poids">Nouveau Poids</string>
 </resources>
