--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="cherche_plat">Rechercher un plat</string>
     <string name="conseil_zone_text">Entrer un plat ...</string>
     <string name="nouveau_poids">Nouveau Poids</string>
+    <string name="ajouter_plat">Ajouter\nun plat</string>
 </resources>
